--- a/WebMusicPlayerAspNetCore/WebMusicPlayerAspNetCore.csproj
+++ b/WebMusicPlayerAspNetCore/WebMusicPlayerAspNetCore.csproj
@@ -34,6 +34,7 @@
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="1.0.0" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Views\Upload\" />
     <Folder Include="wwwroot\uploads\music\" />
   </ItemGroup>
 
